<?xml version="1.0"?>
<package format="2">
  <name>serial_x1</name>
  <version>0.0.0</version>
  <description>The sensor_serial_comm package</description>

  <maintainer email="your_email@domain.com">Your Name</maintainer>

  <license>TODO</license>

  <depend>tf</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>serial</depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>

